@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id 'io.freefair.lombok' version '8.10'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'org.example'
@@ -10,6 +11,27 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: [
+                            'org/example/exception/**',
+                            'org/example/config/**',
+                            'org/example/entity/**',
+                            'org/example/service/payload/**',
+                            "**/Application**"
+                    ]
+            )
+        }))
+    }
 }
 
 dependencies {
@@ -27,4 +49,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
